Overflow and autosize fix

--- a/Deployed/v10/public/stylesheets/landing.css
+++ b/Deployed/v10/public/stylesheets/landing.css
@@ -13,7 +13,7 @@ body {
   color: #fff;
 }
 
-.slideshow { 
+.slideshow {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -25,7 +25,7 @@ body {
   padding: 0;
 }
 
-.slideshow li { 
+.slideshow li {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -36,32 +36,32 @@ body {
   background-repeat: no-repeat;
   opacity: 0;
   z-index: 0;
-  animation: imageAnimation 50s linear infinite; 
+  animation: imageAnimation 50s linear infinite;
 }
 
-.slideshow li:nth-child(1) { 
-  background-image: url(http://i.imgur.com/SBEmFpv.jpg);
+.slideshow li:nth-child(1) {
+  background-image: url(https://www.hdwallpapers.in/download/el_capitan_yosemite_valley_4k-2560x1440.jpg);
 }
-.slideshow li:nth-child(2) { 
-  background-image: url(http://i.imgur.com/K3mPv14.jpg);
-  animation-delay: 10s; 
+.slideshow li:nth-child(2) {
+  background-image: url(https://images.unsplash.com/photo-1444124818704-4d89a495bbae?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a128b113cb6090ba5d87ee29fc3a7869&auto=format&fit=crop&w=1650&q=80);
+  animation-delay: 10s;
 }
-.slideshow li:nth-child(3) { 
+.slideshow li:nth-child(3) {
   background-image: url(http://i.imgur.com/emvhOnb.jpg);
-  animation-delay: 20s; 
+  animation-delay: 20s;
 }
-.slideshow li:nth-child(4) { 
+.slideshow li:nth-child(4) {
   background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
-  animation-delay: 30s; 
+  animation-delay: 30s;
 }
-.slideshow li:nth-child(5) { 
-  background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
-  animation-delay: 40s; 
+.slideshow li:nth-child(5) {
+  background-image: url(https://images.unsplash.com/photo-1454614146802-84004a53428d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5a7c57ce74a2c7b453df8bac5f28ea89&auto=format&fit=crop&w=1867&q=80);
+  animation-delay: 40s;
 }
 
-@keyframes imageAnimation { 
-  0% { 
-    opacity: 0; 
+@keyframes imageAnimation {
+  0% {
+    opacity: 0;
     animation-timing-function: ease-in;
   }
   10% {
