--- a/Deployed/v10/public/stylesheets/main.css
+++ b/Deployed/v10/public/stylesheets/main.css
@@ -88,6 +88,7 @@
     width: 80%;
     float: right;
     display: inline;
+    overflow: auto;
 }
 
 /*fix inline-block spacing*/
